@@ -16,6 +16,10 @@ key_paste=Control-v
 key_quit=Control-q
 key_retilehosts=Alt-r
 key_username=Alt-n
+key_user_1=Alt-1
+key_user_2=Alt-2
+key_user_3=Alt-3
+key_user_4=Alt-4
 max_host_menu_items=30
 method=ssh
 mouse_paste=Button-2
